# TuxBubbles

./: .gitignore  Cargo.toml  README.md  meson.build  meson_options.txt  org.elliotnash.TuxBubbles.json
.github/workflows/: ci.yml
api/: Cargo.toml  README.md
api/src/: client.rs  error.rs  lib.rs  utils.rs
api/src/api/: chat.rs
api/src/models/: chat.rs  mod.rs  request.rs  response.rs
api/test_data/: ping.json
build-aux/: org.elliotnash.TuxBubbles.Devel.json
data/: meson.build  org.elliotnash.TuxBubbles.desktop.in  org.elliotnash.TuxBubbles.desktop.in.in  org.elliotnash.TuxBubbles.gschema.xml  org.elliotnash.TuxBubbles.gschema.xml.in  org.elliotnash.TuxBubbles.metainfo.xml.in  org.elliotnash.TuxBubbles.metainfo.xml.in.in  org.elliotnash.TuxBubbles.service.in
data/icons/: meson.build
data/resources/: meson.build  resources.gresource.xml  style.css
po/: POTFILES.in  meson.build
src/: app.rs  main.rs  main.vala  meson.build  utils.vala  window.vala
src/app/: application.vala  main.vala
src/domain/models/: api-response.vala  chat.vala
src/modals/: about.rs
src/services/: api-client.vala  settings.vala
src/ui/: tuxbubbles.gresource.xml  ui_resources.gresource.xml  window.blp  window.vala
src/ui/dialogs/: about.rs  shortcuts.rs
src/ui/pages/: conversation-list-page.blp  conversation-list-page.vala  conversation-view-page.blp  conversation-view-page.vala  onboarding.blp  onboarding.rs  onboarding.vala
src/ui/widgets/: conversation-row.blp  conversation-row.vala  message-composer.blp  message-composer.vala
