[package]
name = "tuxbubbles"
version = "0.1.0"
authors = ["Elliot Nash <elliotnash@gmail.com>"]
edition = "2024"
publish = false

[profile.release]
lto = true

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
relm4 = { version = "0.10.0", features = ["libadwaita", "gnome_48"] }
tracing = "0.1.41"
tracing-subscriber = "0.3"
