[package]
name = "tuxbubbles"
version = "0.1.0"
authors = ["Elliot Nash <elliotnash@gmail.com>"]
edition = "2024"
publish = false

[workspace]
members = ["api"]

[profile.release]
lto = true

[dependencies]
bluebubbles-api = { path = "./api" }

gettext-rs = { version = "0.7", features = ["gettext-system"] }
relm4 = { version = "0.10.0", features = ["libadwaita", "gnome_48"] }
libadwaita = { version = "0.8.0", features = ["v1_8"] }
tracing = "0.1.41"
tracing-subscriber = "0.3"

reqwest = { version = "0.12", features = ["json", "rustls-tls-no-provider"] }
reqwest-websocket = { version = "0.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls-aws-lc-rs", "sqlite", "chrono", "uuid", "json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.18", features = ["v4", "serde"] }

tokio = { version = "1.48", features = ["full"] }

oo7 = "0.5.0"
fancy-regex = "0.16.2"
anyhow = "1.0"
