[package]
name = "bluebubbles-api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls-no-provider"] }
# rustls = "0.23"
reqwest-websocket = { version = "0.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.41"
tracing-subscriber = "0.3"
bon = "3.8"
thiserror = "2.0"
async-trait = "0.1.89"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.18", features = ["v4", "serde"] }

[dev-dependencies]
httpmock = "0.8"
