[package]
name = "bluebubbles-api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls-no-provider"] }
# rustls = "0.23"
reqwest-websocket = { version = "0.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1.20"
tracing = "0.1.44"
tracing-subscriber = "0.3"
bon = "3.8"
thiserror = "2.0"
async-trait = "0.1.89"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.19", features = ["v4", "serde"] }

[dev-dependencies]
httpmock = "0.8"
dotenv = "0.15"
