install_data(
  '@0@.svg'.format(application_id),
  follow_symlinks: true,
  install_dir: iconsdir / 'hicolor' / 'scalable' / 'apps'
)

install_data(
  '@0@-symbolic.svg'.format(base_id),
  install_dir: iconsdir / 'hicolor' / 'symbolic' / 'apps',
  follow_symlinks: true,
  rename: '@0@-symbolic.svg'.format(application_id)
)
